# ai-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: cli.rs  config.rs  logging.rs  main.rs
crates/ai-memory-cli/src/commands/: auth.rs  init.rs  install_hooks.rs  install_mcp.rs  llm_test.rs  mod.rs  openclaw_plugin.rs  rename_project.rs  serve.rs  status.rs  uninstall.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: uninstall.rs
crates/ai-memory-consolidate/: Cargo.toml
crates/ai-memory-consolidate/src/: bootstrap.rs  consolidator.rs  lib.rs  projection.rs
crates/ai-memory-core/: Cargo.toml
crates/ai-memory-core/src/: error.rs  ids.rs  lib.rs  observation.rs  routing_snippet.rs
crates/ai-memory-hooks/: Cargo.toml
crates/ai-memory-hooks/src/: lib.rs  log.rs  payload.rs  router.rs  sanitize.rs  synth.rs
crates/ai-memory-llm/: Cargo.toml
crates/ai-memory-llm/src/: anthropic.rs  auth.rs  copilot.rs  factory.rs  lib.rs  openai.rs  openai_oauth.rs  opencode.rs
crates/ai-memory-mcp/: Cargo.toml
crates/ai-memory-mcp/src/: admin.rs  lib.rs  server.rs
crates/ai-memory-mcp/tests/: admin_phase3.rs  admin_read_page.rs  admin_rename.rs  admin_status_search.rs  admin_write_page.rs
crates/ai-memory-store/: Cargo.toml
crates/ai-memory-store/src/: error.rs  lib.rs  ops.rs  reader.rs  writer.rs
crates/ai-memory-wiki/: Cargo.toml
crates/ai-memory-wiki/src/: git.rs  lib.rs
docker/: .env.production.example  docker-compose.yml
docs/: ARCHITECTURE.md  auto-scope.md  deploy.md  design-decisions.md  frontend-api.md  install.md  issues-agentmemory.md  issues-basic-memory.md  issues-cognee.md  mcp-install.md  research-agentmemory.md  research-basic-memory.md  research-cognee.md  research-karpathy-llm-wiki.md  usage.md
evals/src/: main.rs
hooks/claude-code/: post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
