[package]
name = "ai-memory-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server transport and tool router."

[dependencies]
ai-memory-core.workspace = true

[lints]
workspace = true
