[package]
name = "ai-memory-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SQLite storage layer with single-writer actor and FTS5/sqlite-vec indices."

[dependencies]
ai-memory-core.workspace = true

[lints]
workspace = true
